@@ -1,4 +1,7 @@
 # Symbols from <gl/get.h>
+from warnings import warnpy3k
+warnpy3k("the GET module has been removed in Python 3.0", stacklevel=2)
+del warnpy3k
 
 BCKBUFFER = 0x1
 FRNTBUFFER = 0x2
